Refactor. Coding Style